--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A software tracking tool for the UAH Drama Department.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "mocha server/**/*.test.js",
+      "test-watch": "nodemon --exec 'npm test'"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/EricMartin827/UAH_Library#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
     "mongoose": "^4.10.5"
   },
   "devDependencies": {
