--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A software tracking tool for the UAH Drama Department.",
   "main": "index.js",
   "scripts": {
-      "test": "mocha server/**/*.test.js",
-      "test-watch": "nodemon --exec 'npm test'"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "mongo-errors": "^1.0.1",
     "mongoose": "^4.10.5"
   },
   "devDependencies": {
