--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "uah_library",
-  "version": "1.0.0",
-  "description": "A software tracking tool for the UAH Drama Department.",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'",
-    "test-debug": "mocha server/**/*.test.js --no-timeout",
-    "test-watch-debug": "nodemon --exec 'npm test' --no-timeout"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EricMartin827/UAH_Library.git"
-  },
-  "author": "Eric William Martin",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/EricMartin827/UAH_Library/issues"
-  },
-  "homepage": "https://github.com/EricMartin827/UAH_Library#readme",
-  "dependencies": {
-    "body-parser": "^1.17.2",
-    "express": "^4.15.3",
-    "mongoose": "^4.10.5",
-    "mongoose-immutable": "0.0.2"
-  },
-  "devDependencies": {
-    "expect": "^1.20.2",
-    "mocha": "^3.4.2",
-    "nodemon": "^1.11.0",
-    "supertest": "^3.0.0"
-  }
+    "name": "uah_library",
+    "version": "1.0.0",
+    "description": "A software tracking tool for the UAH Drama Department.",
+    "main": "index.js",
+    "scripts": {
+	"test": "mocha server/**/**.test.js",
+	"test-watch": "nodemon --exec 'npm test'",
+	"test-debug": "mocha server/**/*.test.js --no-timeout --debug-brk",
+	"test-watch-debug": "nodemon --exec 'npm test' --no-timeout --debug-brk"
+    },
+    "repository": {
+	"type": "git",
+	"url": "git+https://github.com/EricMartin827/UAH_Library.git"
+    },
+    "author": "Eric William Martin",
+    "license": "ISC",
+    "bugs": {
+	"url": "https://github.com/EricMartin827/UAH_Library/issues"
+    },
+    "homepage": "https://github.com/EricMartin827/UAH_Library#readme",
+    "dependencies": {
+	"body-parser": "^1.17.2",
+	"express": "^4.15.3",
+	"mongoose": "^4.10.5",
+	"mongoose-immutable": "0.0.2"
+    },
+    "devDependencies": {
+	"expect": "^1.20.2",
+	"mocha": "^3.4.2",
+	"nodemon": "^1.11.0",
+	"supertest": "^3.0.0"
+    }
 }
