--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "homepage": "https://github.com/EricMartin827/UAH_Library#readme",
     "dependencies": {
 	"body-parser": "^1.17.2",
+	"crypto-js": "^3.1.9-1",
 	"express": "^4.15.3",
+	"jsonwebtoken": "^7.4.1",
+	"lodash": "^4.17.4",
 	"mongoose": "^4.10.5",
 	"mongoose-immutable": "0.0.2",
 	"validator": "^7.2.0"
@@ -32,5 +35,5 @@
 	"mocha": "^3.4.2",
 	"nodemon": "^1.11.0",
 	"supertest": "^3.0.0"
-  }
+    }
 }
