--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     },
     "homepage": "https://github.com/EricMartin827/UAH_Library#readme",
     "dependencies": {
+	"bcryptjs": "^2.4.3",
 	"body-parser": "^1.17.2",
-	"crypto-js": "^3.1.9-1",
 	"express": "^4.15.3",
 	"jsonwebtoken": "^7.4.1",
 	"lodash": "^4.17.4",
@@ -35,5 +35,5 @@
 	"mocha": "^3.4.2",
 	"nodemon": "^1.11.0",
 	"supertest": "^3.0.0"
-    }
+  }
 }
