--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "main": "index.js",
     "scripts": {
 	"local": "nodemon server/Mongo/tests/LocalMongoServer.js --debug-brk",
+	"test-add-entries": "mocha server/Mongo/tests/AddingEntries.test.js",
+	"test-add-entries-watch": "nodemon --exec 'npm test-add-entries'",
 	"test": "mocha server/**/**.test.js",
 	"test-watch": "nodemon --exec 'npm test'",
 	"test-debug": "mocha server/**/*.test.js --no-timeout --debug-brk",
@@ -28,6 +30,7 @@
 	"lodash": "^4.17.4",
 	"mongoose": "^4.10.5",
 	"mongoose-immutable": "0.0.2",
+	"query-string": "^4.3.4",
 	"validator": "^7.2.0"
     },
     "devDependencies": {
@@ -35,5 +38,5 @@
 	"mocha": "^3.4.2",
 	"nodemon": "^1.11.0",
 	"supertest": "^3.0.0"
-  }
+    }
 }
