--- a/package.json
+++ b/package.json
@@ -1,45 +1,62 @@
 {
-    "name": "uah_library",
-    "version": "1.0.0",
-    "description": "A software tracking tool for the UAH Drama Department.",
-    "main": "index.js",
-    "scripts": {
-	"server": "nodemon server/Main.js --debug-brk",
-	"server-debug": "nodemon server.js --no-timeout --debug-brk",
-	"test-additions": "mocha server/Testing/AddingEntries.test.js",
-	"test-queries": "mocha server/Testing/Queries.test.js",
-	"test-security": "mocha server/Testing/Security.test.js",
-	"test": "mocha server/Testing/*.test.js",
-	"test-watch": "nodemon --exec 'npm test'",
-	"test-debug": "mocha server/Testing/*.test.js --no-timeout --debug-brk",
-	"test-debug-query": "mocha server/Testing/Queries.test.js --no-timeout --debug-brk",
-	"test-watch-debug": "nodemon --exec 'npm test' --no-timeout --debug-brk"
-    },
-    "repository": {
-	"type": "git",
-	"url": "git+https://github.com/EricMartin827/UAH_Library.git"
-    },
-    "author": "Eric William Martin",
-    "license": "ISC",
-    "bugs": {
-	"url": "https://github.com/EricMartin827/UAH_Library/issues"
-    },
-    "homepage": "https://github.com/EricMartin827/UAH_Library#readme",
-    "dependencies": {
-	"bcryptjs": "^2.4.3",
-	"body-parser": "^1.17.2",
-	"express": "^4.15.3",
-	"jsonwebtoken": "^7.4.1",
-	"lodash": "^4.17.4",
-	"mongoose": "^4.10.5",
-	"mongoose-immutable": "0.0.2",
-	"query-string": "^4.3.4",
-	"validator": "^7.2.0"
-    },
-    "devDependencies": {
-	"expect": "^1.20.2",
-	"mocha": "^3.4.2",
-	"nodemon": "^1.11.0",
-	"supertest": "^3.0.0"
-    }
+  "name": "uah_library",
+  "version": "1.0.0",
+  "description": "A software tracking tool for the UAH Drama Department.",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack",
+    "server": "nodemon server/Main.js --debug-brk",
+    "server-debug": "nodemon server.js --no-timeout --debug-brk",
+    "test-additions": "mocha server/Testing/AddingEntries.test.js",
+    "test-queries": "mocha server/Testing/Queries.test.js",
+    "test-security": "mocha server/Testing/Security.test.js",
+    "test": "mocha server/Testing/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'",
+    "test-debug": "mocha server/Testing/*.test.js --no-timeout --debug-brk",
+    "test-debug-query": "mocha server/Testing/Queries.test.js --no-timeout --debug-brk",
+    "test-watch-debug": "nodemon --exec 'npm test' --no-timeout --debug-brk"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EricMartin827/UAH_Library.git"
+  },
+  "author": "Eric William Martin",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/EricMartin827/UAH_Library/issues"
+  },
+  "homepage": "https://github.com/EricMartin827/UAH_Library#readme",
+  "dependencies": {
+    "axios": "^0.16.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "jsonwebtoken": "^7.4.1",
+    "lodash": "^4.17.4",
+    "mongoose": "^4.10.5",
+    "mongoose-immutable": "0.0.2",
+    "query-string": "^4.3.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-form": "^7.0.3",
+    "redux-promise": "^0.5.3",
+    "validator": "^7.2.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "expect": "^1.20.2",
+    "html-webpack-plugin": "^2.30.1",
+    "mocha": "^3.4.2",
+    "nodemon": "^1.11.0",
+    "supertest": "^3.0.0",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
+  }
 }
