--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "uah_library",
   "version": "1.0.0",
+  "engines": {
+    "node" : "7.10.0"
+   },
   "description": "A software tracking tool for the UAH Drama Department.",
   "main": "index.js",
   "scripts": {
