--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "uah_library",
   "version": "1.0.0",
-  "engines": {
-    "node" : "7.10.0"
-   },
+  "engines": {"npm" : "4.2.x", "node" : "7.10.x"},
   "description": "A software tracking tool for the UAH Drama Department.",
   "main": "index.js",
   "scripts": {
