--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "uah_library",
   "version": "1.0.0",
-  "engines": {"npm" : "4.2.x", "node" : "7.10.x"},
+  "engines": {
+    "npm": "4.2.x",
+    "node": "7.10.x"
+  },
   "description": "A software tracking tool for the UAH Drama Department.",
   "main": "index.js",
   "scripts": {
@@ -36,6 +39,7 @@
     "express": "^4.15.3",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
+    "mongodb": "^2.2.31",
     "mongoose": "^4.10.5",
     "mongoose-immutable": "0.0.2",
     "query-string": "^4.3.4",
