webpack.congif: added npm run client

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
+    "client": "webpack && webpack-dev-server",
     "start": "node ./server/Main.js",
-    "client": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "server": "nodemon server/Main.js --debug-brk",
     "server-debug": "nodemon server.js --no-timeout --debug-brk",
     "test-additions": "mocha server/Testing/AddingEntries.test.js",
