--- a/package.json
+++ b/package.json
@@ -59,11 +59,13 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
     "expect": "^1.20.2",
     "html-webpack-plugin": "^2.30.1",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "rimraf": "^2.6.1",
+    "style-loader": "^0.18.2",
     "supertest": "^3.0.0",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
