--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "mongoose-immutable": "0.0.2",
     "query-string": "^4.3.4",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.3",
+    "react-bootstrap-table": "^4.0.3",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
