--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "redux": "^3.7.2",
     "redux-form": "^7.0.3",
     "redux-promise": "^0.5.3",
+    "redux-session": "^1.0.3",
+    "redux-thunk": "^2.2.0",
     "validator": "^7.2.0"
   },
   "devDependencies": {
