Added checking out play

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test-additions": "mocha server/Testing/AddingEntries.test.js",
     "test-queries": "mocha server/Testing/Queries.test.js",
     "test-security": "mocha server/Testing/Security.test.js",
+    "test-checkout": "mocha server/Testing/CheckOut.test.js",
     "test": "mocha server/Testing/*.test.js",
     "test-watch": "nodemon --exec 'npm test'",
     "test-debug": "mocha server/Testing/*.test.js --no-timeout --debug-brk",
