--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.7.2",
     "redux-form": "^7.0.3",
+    "redux-persist": "^4.10.0",
     "redux-promise": "^0.5.3",
-    "redux-session": "^1.0.3",
     "redux-thunk": "^2.2.0",
     "validator": "^7.2.0"
   },
