--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "style-loader": "^0.18.2",
     "supertest": "^3.0.0",
     "webpack": "^3.5.5",
+    "webpack-dev-middleware": "^1.12.1",
     "webpack-dev-server": "^2.7.1"
   }
 }
